--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="showDisplayView()"
-                >Exercice Words</a
-              >
+              <a class="nav-link" href="#" onclick="showDisplayView()">Mots</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="showCalculationView()"
-                >Calcul Rapide</a
-              >
+                >Calcul
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="showAbacusView()">Abacus</a>
